added bolding to modal bullet terms

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
                             <!-- Backend Intern -->
                             <div class="role-item" data-modal-title="Software Engineer and Tools Developer Intern"
                                 data-modal-company="Ciena" data-modal-dates="May 2024 - Jan 2025"
-                                data-modal-bullets="Evaluated LLM code generation metrics and presented findings to VP-leadership to guide AI roadmaps.||Engineered a multi-threaded Python tool to identify 5,000+ dead functions in large-scale codebases.||Automated Jenkins CI/CD checks and resolved Protocol Buffer errors for stable Agile deployments.||Boosted Core Library test coverage by 20% across 50k+ lines using automated unit test tools."
+                                data-modal-bullets="Evaluated **LLM code generation metrics** and presented findings to VP-leadership to guide **AI roadmaps**.||Engineered a **multi-threaded Python tool** to identify **5,000+ dead functions** in large-scale codebases.||Automated **Jenkins CI/CD checks** and resolved Protocol Buffer errors for stable **Agile deployments**.||Boosted Core Library test coverage by **20%** across **50k+ lines** using automated unit test tools."
                                 data-modal-tech="Python||C++||RESTful APIs||Microservices||Agile||Jenkins CI/CD||Git||Protocol Buffers">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/CienaBanner.png'); background-position: right 25%; background-size: 55%;">
@@ -146,7 +146,7 @@
             <!-- CU in Space Experience Card -->
             <div class="exp-card" data-modal-title="AI Software Engineer" data-modal-company="CU in Space"
                 data-modal-dates="Jan 2026 - Present"
-                data-modal-bullets="Engineering a Hybrid Search Engine by initializing a vector database and implementing keyword and semantic search to ensure accurate document retrieval. || Designing AI Logic and Safety Layers to create Confidence Gate thresholds and automated citation systems that prevent hallucinations in technical rocketry data."
+                data-modal-bullets="Engineering a **Hybrid Search Engine** by initializing a vector database and implementing **keyword** and **semantic search** to ensure accurate document retrieval. || Designing **AI Logic** and Safety Layers to create **Confidence Gate thresholds** and automated **citation systems** that prevent hallucinations in technical rocketry data."
                 data-modal-tech="Python||Machine Learning||Vector Databases||RAG||Semantic Search">
                 <div class="exp-bg"
                     style="background-image: url('./assets/Expirences/CuinSpaceBanner.jpg'); background-position: right 20%; background-size: cover;">
@@ -178,7 +178,7 @@
             <!-- Shopify Experience Card -->
             <div class="exp-card" data-modal-title="Active Member" data-modal-company="Shopify Builder Sunday"
                 data-modal-dates="Jan 2026 - Present"
-                data-modal-bullets="Initiated the expansion of Builder Sundays to Ottawa by identifying a gap in the local tech scene and mobilizing a community of 50+ developers and founders.">
+                data-modal-bullets="Initiated the expansion of **Builder Sundays** to Ottawa by identifying a gap in the local tech scene and mobilizing a community of **50+ developers** and founders.">
                 <!-- Placeholder background (can use solid color or another image if preferred) -->
                 <div class="exp-bg"
                     style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
@@ -211,7 +211,7 @@
             <!-- Carleton Experience Card -->
             <div class="exp-card" data-modal-title="Peer Mentor" data-modal-company="Carleton University"
                 data-modal-dates="Sept 2025 - Dec 2025"
-                data-modal-bullets="Orchestrated weekly technical reviews for 15+ peers in Data Structures, Algorithms, and Statistics.||Achieved 20% higher peer grades through structured whiteboard sessions and collaborative problem-solving.||Mastered complex logic and algorithmic foundations while mentoring students on technical coursework.">
+                data-modal-bullets="Orchestrated weekly **technical reviews** for **15+ peers** in Data Structures, Algorithms, and Statistics.||Achieved **20% higher peer grades** through structured whiteboard sessions and collaborative problem-solving.||Mastered complex logic and algorithmic foundations while mentoring students on **technical coursework**.">
                 <div class="exp-bg"
                     style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
                 </div>
@@ -245,7 +245,7 @@
             <!-- Example Card 2 -->
             <div class="exp-card" data-modal-title="Coding Bootcamp Founder"
                 data-modal-company="Dovercourt Recreation Centre" data-modal-dates="Jan 2024 – Jun 2024"
-                data-modal-bullets="Designed a 20-week Python curriculum covering Recursion and Big-O notation for 25+ youth students.||Founded and launched a youth coding program to provide accessible technical education within the community.||Mentored 25+ students in computational thinking and foundational programming through hands-on Python labs.">
+                data-modal-bullets="Designed a **20-week Python curriculum** covering Recursion and Big-O notation for **25+ youth students**.||Founded and launched a youth coding program to provide **accessible technical education** within the community.||Mentored 25+ students in **computational thinking** and foundational programming through hands-on Python labs.">
                 <div class="exp-bg"
                     style="background-image: url('./assets/Expirences/DCRbanner.png'); background-position: right 40%; background-size: 60%;">
                 </div>
