bolded key words

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
             <!-- Shopify Experience Card -->
             <div class="exp-card" data-modal-title="Active Member" data-modal-company="Shopify Builder Sunday"
                 data-modal-dates="Jan 2026 - Present"
-                data-modal-bullets="Initiated the expansion of **Builder Sundays** to Ottawa by identifying a gap in the local tech scene and mobilizing a community of **50+ developers** and founders.">
+                data-modal-bullets="Initiated the expansion of Builder Sundays to Ottawa by identifying a gap in the local tech scene and mobilizing a community of **50+ developers** and founders.">
                 <!-- Placeholder background (can use solid color or another image if preferred) -->
                 <div class="exp-bg"
                     style="background-color: #f1f1f1; background-position: right 20%; background-size: cover;">
