--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
             <p class="intro-text">
                 I'm a third-year Computer Science student at <a href="https://carleton.ca/" target="_blank"
-                    rel="noopener noreferrer" class="inline-link">Carleton University</a>.<br>
-                Currently I'm building out RAG-based architectures, organizing <a href="https://buildersundays.ca/"
-                    target="_blank" rel="noopener noreferrer" class="inline-link">Builder Sundays</a> Ottawa, and
+                    rel="noopener noreferrer" class="inline-link">Carleton University</a>. Currently I'm building out
+                RAG-based architectures, organizing <a href="https://buildersundays.ca/" target="_blank"
+                    rel="noopener noreferrer" class="inline-link">Builder Sundays</a> Ottawa, and
                 scaling my latest project. I'm always looking for new challenges; let’s connect!
             </p>
 
@@ -63,11 +63,14 @@
                         <div class="exp-header">
                             <div class="exp-logo">
                                 <!-- Ciena Logo -->
-                                <img src="./assets/Expirences/ciena.png" alt="Ciena Logo" class="company-logo">
+                                <a href="https://www.ciena.com/" target="_blank" rel="noopener noreferrer">
+                                    <img src="./assets/Expirences/ciena.png" alt="Ciena Logo" class="company-logo">
+                                </a>
                             </div>
                             <div class="exp-titles">
                                 <div class="exp-title-row">
-                                    <h3>Ciena</h3>
+                                    <h3><a href="https://www.ciena.com/" target="_blank" rel="noopener noreferrer"
+                                            class="company-link">Ciena</a></h3>
                                     <span class="exp-date">10 months</span>
                                 </div>
                                 <p>Ottawa, Ontario, Canada</p>
@@ -78,7 +81,7 @@
                         <div class="nested-roles">
                             <!-- AI Software Engineer Intern -->
                             <div class="role-item" data-modal-title="AI Software Engineer Intern"
-                                data-modal-company="Ciena" data-modal-dates="May 2025 - Present"
+                                data-modal-company="Ciena" data-modal-dates="May 2026 - Present"
                                 data-modal-bullets="Connect to stay updated!">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/TempBanner.png'); background-position: right 50%; background-size: 55%;">
@@ -97,8 +100,9 @@
 
                             <!-- SWE Intern -->
                             <div class="role-item" data-modal-title="Software Engineer Intern"
-                                data-modal-company="Ciena" data-modal-dates="Jan 2025 - Sep 2025"
-                                data-modal-bullets="Working hard">
+                                data-modal-company="Ciena" data-modal-dates="Sep 2025 - Present"
+                                data-modal-bullets="Architected an **Agentic AI framework** to dynamically generate **Directed Acyclic Graphs (DAGs)**, automating and parallelizing large-scale test execution workflows.||Engineered an end-to-end debugging pipeline using **LLMs** to ingest real-time container logs and instantly identify root causes of microservice failures.||Validated complex networking dependencies by integrating **Yang models**, ensuring AI-generated test paths strictly adhered to system protocols.||Accelerated system sanity testing from **hours to minutes** and successfully adapted the proof-of-concept pipeline across both **DCom and RLS** environments."
+                                data-modal-tech="Python||Agentic AI||LLMs||Directed Acyclic Graphs (DAG)||Yang Models||Microservices||JSON||Log Analysis">
                                 <div class="role-bg"
                                     style="background-image: url('./assets/Expirences/CienaBanner2.jpg'); background-position: right 20%; background-size: 55%;">
                                 </div>
@@ -106,18 +110,19 @@
                                     <h4>Software Engineer Intern</h4>
                                     <span class="role-date">Sep 2025 - Present</span>
                                 </div>
-                                <p class="role-summary">Streamlining network workflows with automated RLS deployments
-                                    and LLM code reviews</p>
+                                <p class="role-summary">Using AI agents to speed up system testing and automate root-cause analysis</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
-                                        <span class="tech-tag">Follow my journey to find out!</span>
+                                        <span class="tech-tag">Python</span>
+                                        <span class="tech-tag">Agentic AI</span>
+                                        <span class="tech-tag">LLMs</span>
                                     </div>
                                 </div>
                             </div>
 
-                            <!-- Backend Intern -->
+                            <!-- Tools Intern -->
                             <div class="role-item" data-modal-title="Software Engineer and Tools Developer Intern"
-                                data-modal-company="Ciena" data-modal-dates="May 2024 - Jan 2025"
+                                data-modal-company="Ciena" data-modal-dates="May 2025 - Aug 2025"
                                 data-modal-bullets="Evaluated **LLM code generation metrics** and presented findings to VP-leadership to guide **AI roadmaps**.||Engineered a **multi-threaded Python tool** to identify **5,000+ dead functions** in large-scale codebases.||Automated **Jenkins CI/CD checks** and resolved Protocol Buffer errors for stable **Agile deployments**.||Boosted Core Library test coverage by **20%** across **50k+ lines** using automated unit test tools."
                                 data-modal-tech="Python||C++||RESTful APIs||Microservices||Agile||Jenkins CI/CD||Git||Protocol Buffers">
                                 <div class="role-bg"
@@ -127,13 +132,11 @@
                                     <h4>Software Engineer and Tools Developer Intern</h4>
                                     <span class="role-date">May 2025 - Aug 2025</span>
                                 </div>
-                                <p class="role-summary">Optimizing global telecom infrastructure via dead-code
-                                    automation and LLM evaluation.</p>
+                                <p class="role-summary">Building automation tools to remove dead code</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
+                                        <span class="tech-tag">Python</span>
                                         <span class="tech-tag">RESTful APIs</span>
-                                        <span class="tech-tag">Microservices</span>
-                                        <span class="tech-tag">Agile</span>
                                         <span class="tech-tag">Jenkins CI/CD</span>
                                     </div>
                                 </div>
@@ -155,21 +158,28 @@
                 <div class="exp-content">
                     <div class="exp-header">
                         <div class="exp-logo">
-                            <img src="./assets/Expirences/CUinSpace.png" alt="CU in Space Logo" class="company-logo">
+                            <a href="https://www.cuinspace.ca/" target="_blank" rel="noopener noreferrer">
+                                <img src="./assets/Expirences/CUinSpace.png" alt="CU in Space Logo"
+                                    class="company-logo">
+                            </a>
                         </div>
                         <div class="exp-titles">
                             <div class="exp-title-row">
                                 <h3>AI Software Engineer</h3>
                                 <span class="exp-date">Jan 2026 - Present</span>
                             </div>
-                            <p>CU in Space</p>
+                            <p><a href="https://www.cuinspace.ca/" target="_blank" rel="noopener noreferrer"
+                                    class="company-link">CU in Space</a></p>
                         </div>
                     </div>
+
+                    <p class="exp-summary">Building a RAG-powered search engine for Canada's student rocketry team</p>
 
                     <div class="exp-details">
                         <div class="tech-stack">
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">Machine Learning</span>
+                            <span class="tech-tag">Vector Databases</span>
                         </div>
                     </div>
                 </div>
@@ -187,22 +197,26 @@
                 <div class="exp-content">
                     <div class="exp-header">
                         <div class="exp-logo">
-                            <img src="./assets/Expirences/Shopify.png" alt="Shopify Logo" class="company-logo">
+                            <a href="https://buildersundays.ca/" target="_blank" rel="noopener noreferrer">
+                                <img src="./assets/Expirences/Shopify.png" alt="Shopify Logo" class="company-logo">
+                            </a>
                         </div>
                         <div class="exp-titles">
                             <div class="exp-title-row">
                                 <h3>Active Member</h3>
                                 <span class="exp-date">Jan 2026 - Present</span>
                             </div>
-                            <p>Shopify Builder Sunday</p>
+                            <p><a href="https://buildersundays.ca/" target="_blank" rel="noopener noreferrer"
+                                    class="company-link">Shopify Builder Sunday</a></p>
                         </div>
                     </div>
+
+                    <p class="exp-summary">Expanding Ottawa's builder community with weekly hack sessions</p>
 
                     <div class="exp-details">
                         <div class="tech-stack">
                             <span class="tech-tag">Community Building</span>
                             <span class="tech-tag">Event Planning</span>
-                            <span class="tech-tag">Networking</span>
                         </div>
                     </div>
                 </div>
@@ -219,22 +233,26 @@
                 <div class="exp-content">
                     <div class="exp-header">
                         <div class="exp-logo">
-                            <img src="./assets/Expirences/CarletonLogo.png" alt="Carleton Logo"
-                                class="company-logo carleton-logo">
+                            <a href="https://carleton.ca/" target="_blank" rel="noopener noreferrer">
+                                <img src="./assets/Expirences/CarletonLogo.png" alt="Carleton Logo"
+                                    class="company-logo carleton-logo">
+                            </a>
                         </div>
                         <div class="exp-titles">
                             <div class="exp-title-row">
                                 <h3>Peer Mentor</h3>
                                 <span class="exp-date">Sept 2025 - Dec 2025</span>
                             </div>
-                            <p>Carleton University</p>
+                            <p><a href="https://carleton.ca/" target="_blank" rel="noopener noreferrer"
+                                    class="company-link">Carleton University</a></p>
                         </div>
                     </div>
 
+                    <p class="exp-summary">Mentoring 15+ peers in Data Structures, Algorithms, and Statistics</p>
+
                     <div class="exp-details">
                         <div class="tech-stack">
-                            <span class="tech-tag">Data Structures</span>
-                            <span class="tech-tag">Algorithms</span>
+                            <span class="tech-tag">DSA</span>
                             <span class="tech-tag">Statistics</span>
                             <span class="tech-tag">Mentorship</span>
                         </div>
@@ -254,23 +272,27 @@
                     <div class="exp-header">
                         <div class="exp-logo">
                             <!-- Dovercourt Logo -->
-                            <img src="./assets/Expirences/DCRlogo.png" alt="Dovercourt Logo" class="company-logo">
+                            <a href="https://dovercourt.org/" target="_blank" rel="noopener noreferrer">
+                                <img src="./assets/Expirences/DCRlogo.png" alt="Dovercourt Logo" class="company-logo">
+                            </a>
                         </div>
                         <div class="exp-titles">
                             <div class="exp-title-row">
                                 <h3>Coding Bootcamp Founder</h3>
                                 <span class="exp-date">Jan 2024 – Jun 2024</span>
                             </div>
-                            <p>Dovercourt Recreation Centre (Non-Profit)</p>
+                            <p><a href="https://dovercourt.org/" target="_blank" rel="noopener noreferrer"
+                                    class="company-link">Dovercourt Recreation Centre (Non-Profit)</a></p>
                         </div>
                     </div>
+
+                    <p class="exp-summary">Founded a 20-week Python bootcamp for 25+ youth at a community rec centre</p>
 
                     <div class="exp-details">
                         <div class="tech-stack">
                             <span class="tech-tag">Python</span>
                             <span class="tech-tag">Recursion</span>
                             <span class="tech-tag">Big-O Notation</span>
-                            <span class="tech-tag">Curriculum Design</span>
                         </div>
                     </div>
                 </div>
