--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
         <section id="experience" class="doc-section">
             <div class="section-header-row">
-                <h2 class="section-title" style="margin-bottom:0;">What I've learned and where I've been.</h2>
+                <h2 class="section-title" style="margin-bottom:0;">What I've been doing</h2>
                 <span class="section-hint">(click each role to learn more)</span>
             </div>
 
