added new project

--- a/index.html
+++ b/index.html
@@ -110,7 +110,8 @@
                                     <h4>Software Engineer Intern</h4>
                                     <span class="role-date">Sep 2025 - Present</span>
                                 </div>
-                                <p class="role-summary">Using AI agents to speed up system testing and automate root-cause analysis</p>
+                                <p class="role-summary">Using AI agents to speed up system testing and automate
+                                    root-cause analysis</p>
                                 <div class="role-tech-stack">
                                     <div class="tech-stack">
                                         <span class="tech-tag">Python</span>
@@ -352,6 +353,30 @@
                             <span class="tech-tag">TypeScript</span>
                             <span class="tech-tag">Firebase</span>
                             <span class="tech-tag">Tailwind</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- Sentinel Project -->
+                <a href="https://github.com/samith01/NationalBankHachathon" target="_blank" rel="noopener noreferrer"
+                    class="project-card">
+                    <div class="project-media">
+                        <iframe
+                            src="https://www.youtube.com/embed/U0l-6MOTziM?autoplay=1&mute=1&loop=1&playlist=U0l-6MOTziM&controls=0&disablekb=1&fs=0&modestbranding=1&playsinline=1"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>Sentinel</h3>
+                            <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon">
+                        </div>
+                        <p class="project-desc">An ML tool that analyzes your trade history to find hidden biases.
+                        </p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">FastAPI</span>
+                            <span class="tech-tag">XGBoost</span>
                         </div>
                     </div>
                 </a>
