--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
                 where I’ve done some of my favorite work, here are a few highlights:
             </p>
             <div class="projects-grid">
-                <!-- Amplify Project -->
+                <!-- Amplify Project (Temporarily Hidden)
                 <a href="https://github.com/clam433/githappens" target="_blank" rel="noopener noreferrer"
                     class="project-card">
                     <div class="project-media">
@@ -333,32 +333,10 @@
                         </div>
                     </div>
                 </a>
-
-                <!-- TutorLink Project -->
-                <a href="https://github.com/yasminmahdi06/TutorLink" target="_blank" rel="noopener noreferrer"
-                    class="project-card">
-                    <div class="project-media">
-                        <iframe
-                            src="https://www.youtube.com/embed/SeVZJWTplcs?autoplay=1&mute=1&loop=1&playlist=SeVZJWTplcs&controls=0&disablekb=1&fs=0&modestbranding=1&playsinline=1"
-                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-                    </div>
-                    <div class="project-content">
-                        <div class="project-header">
-                            <h3>TutorLink</h3>
-                            <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon">
-                        </div>
-                        <p class="project-desc">A peer‑to‑peer tutoring platform connecting students with tutors.</p>
-                        <div class="tech-stack">
-                            <span class="tech-tag">React</span>
-                            <span class="tech-tag">TypeScript</span>
-                            <span class="tech-tag">Firebase</span>
-                            <span class="tech-tag">Tailwind</span>
-                        </div>
-                    </div>
-                </a>
+                -->
 
                 <!-- Sentinel Project -->
-                <a href="https://github.com/samith01/NationalBankHachathon" target="_blank" rel="noopener noreferrer"
+                <a href="https://sentinel-six-lyart.vercel.app/" target="_blank" rel="noopener noreferrer"
                     class="project-card">
                     <div class="project-media">
                         <iframe
@@ -368,7 +346,8 @@
                     <div class="project-content">
                         <div class="project-header">
                             <h3>Sentinel</h3>
-                            <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon">
+                            <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon"
+                                onclick="event.preventDefault(); event.stopPropagation(); window.open('https://github.com/samith01/NationalBankHachathon', '_blank')">
                         </div>
                         <p class="project-desc">An ML tool that analyzes your trade history to find hidden biases.
                         </p>
@@ -377,6 +356,30 @@
                             <span class="tech-tag">TypeScript</span>
                             <span class="tech-tag">FastAPI</span>
                             <span class="tech-tag">XGBoost</span>
+                        </div>
+                    </div>
+                </a>
+
+                <!-- TutorLink Project -->
+                <a href="https://tutor-link-bay.vercel.app" target="_blank" rel="noopener noreferrer"
+                    class="project-card">
+                    <div class="project-media">
+                        <iframe
+                            src="https://www.youtube.com/embed/SeVZJWTplcs?autoplay=1&mute=1&loop=1&playlist=SeVZJWTplcs&controls=0&disablekb=1&fs=0&modestbranding=1&playsinline=1"
+                            frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+                    </div>
+                    <div class="project-content">
+                        <div class="project-header">
+                            <h3>TutorLink</h3>
+                            <img src="./assets/Icons/github.png" alt="GitHub Repository" class="project-icon"
+                                onclick="event.preventDefault(); event.stopPropagation(); window.open('https://github.com/yasminmahdi06/TutorLink', '_blank')">
+                        </div>
+                        <p class="project-desc">A peer‑to‑peer tutoring platform connecting students with tutors.</p>
+                        <div class="tech-stack">
+                            <span class="tech-tag">React</span>
+                            <span class="tech-tag">TypeScript</span>
+                            <span class="tech-tag">Firebase</span>
+                            <span class="tech-tag">Tailwind</span>
                         </div>
                     </div>
                 </a>
