removed carelton expirence

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
             </div>
 
             <!-- Carleton Experience Card -->
-            <div class="exp-card" data-modal-title="Peer Mentor" data-modal-company="Carleton University"
+            <!-- <div class="exp-card" data-modal-title="Peer Mentor" data-modal-company="Carleton University"
                 data-modal-dates="Sept 2025 - Dec 2025"
                 data-modal-bullets="Orchestrated weekly **technical reviews** for **15+ peers** in Data Structures, Algorithms, and Statistics.||Achieved **20% higher peer grades** through structured whiteboard sessions and collaborative problem-solving.||Mastered complex logic and algorithmic foundations while mentoring students on **technical coursework**.">
                 <div class="exp-bg"
@@ -259,7 +259,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
 
             <!-- Example Card 2 -->
             <div class="exp-card" data-modal-title="Coding Bootcamp Founder"
